# point-explorer

./: .gitignore  CMakeLists.txt  README.md  package.json
include/: Computation.h  GeometricFeatures.h
nan-module/: CMakeLists.txt  main.cpp  package.json
src/: CMakeLists.txt  Computation.cpp  GeometricFeatures.cpp  main.cpp
